[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scenes/Kracken/Kracken_big_tentacle.gd" type="Script" id=1]
[ext_resource path="res://Images/Big_Tentacle.tex" type="Texture" id=2]
[ext_resource path="res://Scenes/Kracken/Kracken_big_tentacle_hitbox.gd" type="Script" id=3]
[ext_resource path="res://Audio/339114__gwmx-youtube03__thud.wav" type="Sample" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 19, 32 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 2 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"has_emerged" } ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision/layers")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.7 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 2 ] }
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody2D:collision/layers")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 2 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 19 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("DeathArea2d:collision/layers")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 1.9 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 11 ] }
tracks/5/type = "value"
tracks/5/path = NodePath("SamplePlayer2D:play/play")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 1.6 ), "transitions":FloatArray( 1 ), "update":2, "values":[ "thud" ] }

[sub_resource type="Animation" id=3]

resource/name = "Submerge"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D:collision/layers")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ 0, 0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 3, 18 ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision/layers")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 0 ] }
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision/mask")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("DeathArea2d:collision/layers")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 0 ] }

[sub_resource type="Animation" id=4]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 2 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D:collision/layers")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 3 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("DeathArea2d:collision/layers")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 3 ] }

[sub_resource type="Animation" id=5]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ] }

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 4.96947 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 68.2051, 6.35931 )

[sub_resource type="SampleLibrary" id=8]

samples/thud = { "db":0.0, "pitch":1.0, "sample":ExtResource( 4 ) }

[node name="BigTentacle" type="KinematicBody2D"]

transform/pos = Vector2( 211.859, 74.6151 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, -18.4379, 165.379 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 33
frame = 18
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Emerge = SubResource( 2 )
anims/Submerge = SubResource( 3 )
anims/Wiggle = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="HitAnimation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hit = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SubmergeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="EmergeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 6.0
one_shot = false
autostart = false

[node name="DeathArea2d" type="Area2D" parent="."]

transform/pos = Vector2( -19.1413, 162 )
transform/scale = Vector2( 2, 2 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 8.85197, 0, 0, 1, -99.3764, -7.59295 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea2d"]

transform/pos = Vector2( -99.3764, -7.59295 )
transform/scale = Vector2( 8.85197, 1 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="BaseCollisionShape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -18.4379, 165.379 )
transform/scale = Vector2( 3, 3 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="StaticBody2D" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 2.70347, 0, 0, 2.4776, -213.87, 146.581 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 3 )
__meta__ = { "_edit_lock_":true }

[node name="WiggleCollisionShape" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( -213.87, 146.581 )
transform/scale = Vector2( 2.70347, 2.4776 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 8 )
config/pitch_random = 0.0

[connection signal="timeout" from="SubmergeTimer" to="." method="_on_SubmergeTimer_timeout"]

[connection signal="timeout" from="EmergeTimer" to="." method="_on_EmergeTimer_timeout"]

[connection signal="body_enter" from="DeathArea2d" to="." method="_on_DeathArea2d_body_enter"]


